--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
     color: black;
     font-size: 34px;
-    font-family: 24px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
