--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 h1 {
+    text-align: center;
     color: black;
     font-size: 34px;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
