--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-h1 {
-    text-align: center;
-    color: black;
-    font-size: large;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
-p {
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: small;
+body {
+    background-color: rgb(46, 46, 46);
 }
