--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 body {
-    text-align: center
-    background-color: rgb(46, 46, 46);
+    text-align: center;
+    background-color: rgb(48, 48, 48);
 }
