--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
     justify-content: center;
 }
 
-.title {
-    color: aliceblue;
+#title {
+    
     font-size: large;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
