--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .title {
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     font-size: large;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
