--- a/style.css
+++ b/style.css
@@ -7,6 +7,6 @@ body {
 
 .title {
     color: rgb(255, 255, 255);
-    font-size: large;
+    font-size: 50px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
