--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
 }
 
-.title {
+h1 {
     color: rgb(255, 255, 255);
     font-size: 100px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
